--- a/app/assets/stylesheets/application/home.scss
+++ b/app/assets/stylesheets/application/home.scss
@@ -11,13 +11,9 @@
   text-shadow: 0 0 1px rgba(0, 0, 0, 0.3), 0 0 21px #000000;
   padding: 15% 0;
 
-
-  @include parallax-background('photo_section_bg_2560x1707.jpg', 10%, 114%);
+  @include parallax-background('photo_section_bg_2560x1707.jpg');
   @media (max-width: 1440px) {
-    @include parallax-background('photo_section_bg_1440x960.jpg', 10%, 114%);
-  }
-  @media (max-width: 720px) {
-    @include parallax-background('photo_section_bg_720x480.jpg', 10%, 114%);
+    @include parallax-background('photo_section_bg_1440x960.jpg');
   }
 }
 
